@@ -27,6 +27,7 @@
 - fixed `expires` argument in the `$.cookie(key, value, expires|options)` method
 - fixed HTMLParser for XML, added support for `<!CDATA[[`
 - added `outerHTML` property for the HTMLParser element
+- improved `HTMLParser.text()` method
 
 ========================
 0.0.12
